# libsaltpack

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  README.md  main.md
.github/workflows/: build.yaml
android/jni/: Android.mk  Application.mk
cmake_modules/: CodeCoverage.cmake  FindLibsodium.cmake  FindMsgPack.cmake  FindMsgpack.cmake
docs/: CNAME  _armored_input_stream_8h_source.html  _armored_output_stream_8h_source.html  _message_reader_8h_source.html  _message_writer_8h_source.html  _saltpack_exception_8h_source.html  _utils_8h_source.html  annotated.html  classes.html  classsaltpack_1_1_armored_input_stream-members.html  classsaltpack_1_1_armored_input_stream.html  classsaltpack_1_1_armored_output_stream-members.html  classsaltpack_1_1_armored_output_stream.html  classsaltpack_1_1_message_reader-members.html  classsaltpack_1_1_message_reader.html  classsaltpack_1_1_message_writer-members.html  classsaltpack_1_1_message_writer.html  classsaltpack_1_1_saltpack_exception-members.html  classsaltpack_1_1_saltpack_exception.html  classsaltpack_1_1_utils-members.html  classsaltpack_1_1_utils.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_fcd7ab233e6b806d9d3492cec6c1a8bd.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  menudata.js  modes_8h_source.html  namespacemembers.html  namespacemembers_type.html  namespacemembers_vars.html  namespaces.html  namespacesaltpack.html  types_8h_source.html
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  namespaces_0.js  pages_0.js  searchdata.js  typedefs_0.js  variables_0.js
ext/gtest/: CMakeLists.txt
include/: saltpack.h
include/saltpack/: ArmoredInputStream.h  ArmoredOutputStream.h  Base.h  HeaderPacket.h  HeaderPacketRecipient.h  MessageReader.h  MessageWriter.h  PayloadPacket.h  PayloadPacketV2.h  SaltpackException.h  SignatureHeaderPacket.h  SignaturePayloadPacket.h  SignaturePayloadPacketV2.h  SigncryptionPayloadPacket.h  Utils.h  alphabets.h  modes.h  types.h
src/: ArmoredInputStream.cpp  ArmoredOutputStream.cpp  Base.cpp  MessageReader.cpp  MessageWriter.cpp  Utils.cpp
test/: armor.cpp  encryption.cpp  main.cpp  signature.cpp  signcryption.cpp  utils.cpp
